--- a/ReadMe
+++ b/ReadMe
@@ -1,4 +1,4 @@
-Hello and welcome to my GitHub profile! #F67909
+Hello and welcome to my GitHub profile!
 
 My name is Swati Raghav, and I'm a software engineer with a passion for creating clean and efficient code. I'm experienced in programming languages like Python, Java, and C++, and have a strong understanding of data structures, algorithms, and software design principles.
 
