Buy me a coffee

--- a/ReadMe
+++ b/ReadMe
@@ -1,5 +1,7 @@
 Hello and welcome to my GitHub profile!
 
+[!["Buy Me A Coffee"](https://www.buymeacoffee.com/assets/img/custom_images/orange_img.png)](https://www.buymeacoffee.com/gbraad)
+
 My name is Swati Raghav, and I'm a software engineer with a passion for creating clean and efficient code. I'm experienced in programming languages like Python, Java, and C++, and have a strong understanding of data structures, algorithms, and software design principles.
 
 I believe in the power of technology to change the world, which is why I'm always looking for ways to improve and innovate in my field. Whether it's working on personal projects or contributing to open-source software, I'm always eager to learn and grow as a developer.
